--- a/src/app/features/quote/quote-calculator/containers/quote-calculator/quote-calculator.component.html
+++ b/src/app/features/quote/quote-calculator/containers/quote-calculator/quote-calculator.component.html
@@ -3,7 +3,8 @@
     <mat-card-title>Quote Calculator</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    test
+    <dmiw-calculator-slider [amount]="" [min]="22" [max]="1000"></dmiw-calculator-slider>
+    {{(quote | async)?.email}}
   </mat-card-content>
   <mat-card-actions>
     <button mat-button>LIKE</button>
