--- a/src/app/features/quote/quote-calculator/containers/quote-calculator/quote-calculator.component.html
+++ b/src/app/features/quote/quote-calculator/containers/quote-calculator/quote-calculator.component.html
@@ -71,6 +71,6 @@
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="primary">Calculate Quote</button>
+    <button (click)="saveQuote()" mat-raised-button color="primary">Calculate Quote</button>
   </mat-card-actions>
 </mat-card>
